--- a/src/main/resources/releasenotes.txt
+++ b/src/main/resources/releasenotes.txt
@@ -1,3 +1,7 @@
+Versie 0.2
+Boek.java aangevuld met aantalBladzijden
+Main02.java
+************************************
 Versie 0.1
 Boek.java met alleen titel en auteur
 Main01.java
